--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h2> HELLO WORLD!</h2>
-    <<p> Soo Dhawoow Walaal</p>
+    <p> Soo Dhawoow Walaal</p>
+    <p> war waa anaga </p>
+    
 
   </body>
 </html>
